# k8s-spot-termination-notice

./: .dockerignore  .gitignore  .travis.yml  CLAUDE.md  Dockerfile  Dockerfile.arm64  Pipfile  README.md  pyproject.toml  requirements.txt  spot.py  spot_test.py
.github/workflows/: docker.yml  issues.yml  release.yml  tagging.yml
deployment/: daemonset.yml  k8s-spot-termination-notice.yml  kustomization.yml  rbac.yml  secret.yml
