[project]
name = "k8s-spot-termination-notice"
version = "3.1"
description = "Kubernetes Spot Instance Notification"
requires-python = ">=3.13"
dependencies = [
  "requests>=2.32.0",
  "slack-sdk>=3.43.0",
  "kubernetes>=36.0.2",
]

[dependency-groups]
dev = [
  "flake8>=7.0.0",
  "coverage>=7.15.1",
  "pytest>=9.1.1",
]

[tool.uv]
package = false
